# email-agent

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: server.py
files/: email.eml  just_the_html_1.txt  keywords.txt
