[tool.poetry]
name = "email-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.3.0"}
pydantic = ">=2.7,<3.0"
httpx = "=0.27.2"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langsmith = "^0.2.4"
python-dotenv = "^1.0.1"
boto3 = "^1.35.87"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
